provider sever wallet update doc
