# oas/open-api.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "3.0.0",
+    "version": "3.0.3",
     "title": "Secure Data Access API",
     "description": "Secure Data Access API for the i3-Market Project",
     "license": {
@@ -255,7 +255,7 @@
         }
       }
     },
-    "/agreement/dataExchangeAgreementInfo": {
+    "/agreement/dataSharingAgreementInfo": {
       "post": {
         "tags": [
           "AgreementController"
